hphp/hack/test/typecheck/expression_trees/helper_function_void2.php.exp
ERROR: File "helper_function_void2.php", line 22, characters 22-31:
Invalid argument (Typing[4110])
  File "helper_function_void2.php", line 20, characters 47-47:
  Expected `T`
  File "helper_function_void2.php", line 7, characters 62-65:
  But got `void`
ERROR: File "helper_function_void2.php", line 22, characters 22-31:
You are using the return value of a `void` function (Typing[4119])
  File "helper_function_void2.php", line 7, characters 62-65:
  A `void` function doesn't return a value.
ERROR: File "helper_function_void2.php", line 23, characters 22-26:
Invalid argument (Typing[4110])
  File "helper_function_void2.php", line 20, characters 47-47:
  Expected `T`
  File "helper_function_void2.php", line 14, characters 60-63:
  But got `void`
ERROR: File "helper_function_void2.php", line 23, characters 22-26:
You are using the return value of a `void` function (Typing[4119])
  File "helper_function_void2.php", line 14, characters 60-63:
  A `void` function doesn't return a value.
